# cc-proj2

./: .gitignore  README.md  proj2.ini  proj2.service  pyproject.toml
nginx/: proj2
proj2/: __init__.py  main.py
proj2/app/: app.py
proj2/blueprints/: auth.py  root.py
proj2/models/: user.py
proj2/templates/: base.html  login.html  profile.html  signup.html
