[tool.poetry]
name = "proj2"
version = "0.1.0"
description = ""
authors = ["Nick Lay <layns@mail.uc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.3"
uwsgi = "^2.0.21"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
